--- a/tools/lazdatadesktop/languages/lazdatadesktop.de.po
+++ b/tools/lazdatadesktop/languages/lazdatadesktop.de.po
@@ -725,7 +725,9 @@ msgid "Run query"
 msgstr "Abfrage starten"
 
 #: lazdatadeskstr.srowsaffected
-msgid "Query executed succesfully: %d rows affected."
+#, fuzzy
+#| msgid "Query executed succesfully: %d rows affected."
+msgid "Query executed successfully: %d rows affected."
 msgstr "Abfrage erfolgreich ausgeführt: %d Zeilen betroffen."
 
 #: lazdatadeskstr.ssave
