--- a/tools/lazdatadesktop/languages/lazdatadesktop.lt.po
+++ b/tools/lazdatadesktop/languages/lazdatadesktop.lt.po
@@ -726,7 +726,9 @@ msgid "Run query"
 msgstr "Vykdyti užklausą"
 
 #: lazdatadeskstr.srowsaffected
-msgid "Query executed succesfully: %d rows affected."
+#, fuzzy
+#| msgid "Query executed succesfully: %d rows affected."
+msgid "Query executed successfully: %d rows affected."
 msgstr "Užklausa įvykdyta sėkmingai. Paveikta eilučių: %d."
 
 #: lazdatadeskstr.ssave
