--- a/tools/lazdatadesktop/languages/lazdatadesktop.pt_BR.po
+++ b/tools/lazdatadesktop/languages/lazdatadesktop.pt_BR.po
@@ -761,7 +761,9 @@ msgid "Run query"
 msgstr "Executar consulta"
 
 #: lazdatadeskstr.srowsaffected
-msgid "Query executed succesfully: %d rows affected."
+#, fuzzy
+#| msgid "Query executed succesfully: %d rows affected."
+msgid "Query executed successfully: %d rows affected."
 msgstr "Consulta executada com sucesso: %d registros afetados."
 
 #: lazdatadeskstr.ssave
