IDE: regenerated translations; updated Russian translation
git-svn-id: trunk@45920 -

--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -12283,7 +12283,7 @@ msgid "Move files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovefilesfromtothedirectoryof
-msgid "Move %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveonepositiondown
@@ -12299,7 +12299,7 @@ msgid "Move or Copy files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveorcopyfilesfromtothedirectoryofpackage
-msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovepage
@@ -14469,6 +14469,10 @@ msgstr "Projekt %s"
 #: lazarusidestrconsts.lisproject2
 msgid "Project: "
 msgstr "Projekt:"
+
+#: lazarusidestrconsts.lisproject3
+msgid "project"
+msgstr ""
 
 #: lazarusidestrconsts.lisprojectchanged
 msgid "Project changed"
