--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -12298,7 +12298,7 @@ msgid "Move files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovefilesfromtothedirectoryof
-msgid "Move %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveonepositiondown
@@ -12314,7 +12314,7 @@ msgid "Move or Copy files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveorcopyfilesfromtothedirectoryofpackage
-msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovepage
@@ -14579,6 +14579,10 @@ msgstr ""
 
 #: lazarusidestrconsts.lisproject2
 msgid "Project: "
+msgstr ""
+
+#: lazarusidestrconsts.lisproject3
+msgid "project"
 msgstr ""
 
 #: lazarusidestrconsts.lisprojectchanged
