--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -11741,7 +11741,7 @@ msgid "Move files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovefilesfromtothedirectoryof
-msgid "Move %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveonepositiondown
@@ -11757,7 +11757,7 @@ msgid "Move or Copy files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveorcopyfilesfromtothedirectoryofpackage
-msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovepage
@@ -13847,6 +13847,10 @@ msgstr "Projekti %s"
 
 #: lazarusidestrconsts.lisproject2
 msgid "Project: "
+msgstr ""
+
+#: lazarusidestrconsts.lisproject3
+msgid "project"
 msgstr ""
 
 #: lazarusidestrconsts.lisprojectchanged
