--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -12612,7 +12612,7 @@ msgid "Move files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovefilesfromtothedirectoryof
-msgid "Move %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveonepositiondown
@@ -12628,7 +12628,7 @@ msgid "Move or Copy files?"
 msgstr ""
 
 #: lazarusidestrconsts.lismoveorcopyfilesfromtothedirectoryofpackage
-msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s."
+msgid "Move or copy %s file(s) from %s to the directory%s%s%sof %s?"
 msgstr ""
 
 #: lazarusidestrconsts.lismovepage
@@ -14922,6 +14922,10 @@ msgstr ""
 
 #: lazarusidestrconsts.lisproject2
 msgid "Project: "
+msgstr ""
+
+#: lazarusidestrconsts.lisproject3
+msgid "project"
 msgstr ""
 
 #: lazarusidestrconsts.lisprojectchanged
