--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2014-08-06 03:21+0400\n"
+"PO-Revision-Date: 2014-08-06 04:05+0400\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,3325,-1,-1\n"
@@ -6183,6 +6183,10 @@ msgstr "Параметры командной строки программы"
 msgctxt "lazarusidestrconsts.liscompile"
 msgid "Compile"
 msgstr "Компилировать"
+
+#: lazarusidestrconsts.liscompileproject
+msgid "Compile Project"
+msgstr "Компиляция проекта"
 
 #: lazarusidestrconsts.liscompiler
 msgid "Compiler"
